# 20th_Intern_WOOJEONGYOON

./: README.md
Open_CV/day1/hw1/hw1_pkg/: CMakeLists.txt  package.xml
Open_CV/day1/hw1/hw1_pkg/include/opencvtest/: opencvtest.hpp
Open_CV/day1/hw1/hw1_pkg/src/: opencvtest.cpp
Open_CV/day1/hw2/hw2_pkg/: CMakeLists.txt  package.xml
Open_CV/day1/hw2/hw2_pkg/include/opencv_udp/: mainwindow.hpp  qnode.hpp
Open_CV/day1/hw2/hw2_pkg/src/: main.cpp  mainwindow.cpp  qnode.cpp
Open_CV/day1/hw2/hw2_pkg/ui/: mainwindow.ui
Open_CV/day2/hw1_pkg/: CMakeLists.txt
Open_CV/day2/hw1_pkg/include/vision/: mainwindow.hpp  qnode.hpp
Open_CV/day2/hw1_pkg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Open_CV/day2/hw1_pkg/install/vision/include/vision/: mainwindow.hpp
Open_CV/day2/hw1_pkg/install/vision/lib/vision/: vision
Open_CV/day2/hw1_pkg/install/vision/share/ament_index/resource_index/package_run_dependencies/: vision
Open_CV/day2/hw1_pkg/install/vision/share/vision/: local_setup.sh  package.sh
Open_CV/day2/hw1_pkg/log/: latest_build
Open_CV/day2/hw1_pkg/src/: main.cpp  mainwindow.cpp  qnode.cpp
Open_CV/day2/hw1_pkg/ui/: mainwindow.ui
QT&C++/day3/hw3/hw3_pkg 구현 못함/src/: mainwindow.cpp
QT&C++/day4/hw1/hw1_pkg/: CMakeLists.txt
ROS2/day3/hw2/hw2-1/: turtlesim_robotarm_launch.py
