<package format="3">
  <name>opencv_udp</name>
  <version>0.0.1</version>
  <description>Qt5 GUI for UDP + ROS2 + OpenCV</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>opencv</depend>

  <exec_depend>qtbase5-dev</exec_depend>
  <exec_depend>qt5-qmake</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

